Namechanges on properties.

--- a/vp-services-camel/src/main/resources/application.properties
+++ b/vp-services-camel/src/main/resources/application.properties
@@ -52,11 +52,11 @@ http.forwarded.header.proto=X-Forwarded-Proto
 ip.whitelist=127.0.0.1
 
 #comma separated, this param can be empty
-ip.consumer.list=
+sender.id.allowed.list=
 
 #Property to determine if the ip.consumer.list should be enforced or not, this param can be empty
 #WARNING: If not existing, the default value is true.
-ip.consumer.list.enforce=false
+approve.the.use.of.header.original.consumer=false 
 
 #Property if correlation id is to be propagated to producer or not, for HTTPS traffic
 propagate.correlation.id.for.https=false
