NTP-893 lösning av problem med srora responce från producent

--- a/vp-services-camel/src/main/resources/application.properties
+++ b/vp-services-camel/src/main/resources/application.properties
@@ -92,3 +92,5 @@ headers.reg.exp.keepRegExp=(?i)x-rivta.*
 
 vp.producer.retry.attempts=2
 vp.producer.retry.delay=2000
+
+vp.max.response.length=15000000
