--- a/vp-services-camel/src/test/resources/application.properties
+++ b/vp-services-camel/src/test/resources/application.properties
@@ -86,3 +86,5 @@ headers.reg.exp.keepRegExp=(?i)x-rivta.*
 
 vp.producer.retry.attempts=2
 vp.producer.retry.delay=200
+
+vp.max.response.length=15000000
