NTP-832 - Fix Sonar issues and some name conventions

--- a/vp-services-camel/src/test/resources/application.properties
+++ b/vp-services-camel/src/test/resources/application.properties
@@ -42,7 +42,7 @@ certificate.senderid.subject.pattern=OU=([^,]+)
 ip.whitelist=127.0.0.1,1.2.3.4,5.6.7.8
 
 #comma separated, this param can be empty
-sender.id.allowed.list=127.0.0.1,127.0.0.2,tp,TSTNMT2321000156-B02
+sender.id.allowed.list=SENDER1,SENDER2,tp,TSTNMT2321000156-B02
 
 #Property to determine if the sender.id.allowed.list should be enforced or not, this param can be empty.
 #WARNING: If not existing, the default value is true.
@@ -84,5 +84,5 @@ headers.reg.exp.removeRegExp=(?i)rivversion|wsdl_namespace|x-vp-auth-cert|servic
 #Regexp to prevent certain headers from being filtered/removed (when propagated to producer)
 headers.reg.exp.keepRegExp=(?i)x-rivta.*
 
-vp.producer.retry.attempts=2
+vp.producer.retry.attempts=1
 vp.producer.retry.delay=200
