--- a/pom.xml
+++ b/pom.xml
@@ -161,6 +161,12 @@
         <artifactId>spring-boot-starter-test</artifactId>
         <version>${spring.boot-version}</version>
         <scope>test</scope>
+        <exclusions>
+          <exclusion>
+            <groupId>com.vaadin.external.google</groupId>
+            <artifactId>android-json</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.apache.camel</groupId>
