NTP-893 andring av default value av connection timeout

--- a/vp-services-camel/src/test/resources/application.properties
+++ b/vp-services-camel/src/test/resources/application.properties
@@ -87,4 +87,8 @@ headers.reg.exp.keepRegExp=(?i)x-rivta.*
 vp.producer.retry.attempts=2
 vp.producer.retry.delay=200
 
+#response storlek i bytes
 vp.max.response.length=15000000
+
+#timeout för producent i ms
+vp.connection.timeout=2000
