--- a/vp-services-camel/src/main/resources/application.properties
+++ b/vp-services-camel/src/main/resources/application.properties
@@ -93,4 +93,8 @@ headers.reg.exp.keepRegExp=(?i)x-rivta.*
 vp.producer.retry.attempts=2
 vp.producer.retry.delay=2000
 
+#response storlek i bytes
 vp.max.response.length=15000000
+
+#timeout för producent i ms
+vp.connection.timeout=2000
