NTP-893: Handle large incomming payloads
NMT testcase 5.4.7 fails because vp-camel couldn't handle payloads larger then 1MB

--- a/vp-services-camel/src/test/resources/application.properties
+++ b/vp-services-camel/src/test/resources/application.properties
@@ -87,8 +87,8 @@ headers.reg.exp.keepRegExp=(?i)x-rivta.*
 vp.producer.retry.attempts=1
 vp.producer.retry.delay=200
 
-#response storlek i bytes
-vp.max.response.length=15000000
+#response storlek i bytes (15Mb=15*1024*1024)
+vp.max.receive.length=15728640
 
 #timeout för producent i ms
 vp.connection.timeout=2000
