--- a/vp-services-camel/src/test/resources/application.properties
+++ b/vp-services-camel/src/test/resources/application.properties
@@ -58,7 +58,7 @@ vp.header.user.agent=SKLTP VP/3.1
 vp.header.content.type=text/xml;charset=UTF-8
 
 # Reverse proxy/LB header names
-http.forwarded.header.for=X-Forwarded-For
+http.forwarded.header.xfor=X-Forwarded-For
 http.forwarded.header.host=X-Forwarded-Host
 http.forwarded.header.port=X-Forwarded-Port
 http.forwarded.header.proto=X-Forwarded-Proto
@@ -76,8 +76,8 @@ takcache.endpoint.address=http://localhost:9100/tak-services/SokVagvalsInfo/v2
 
 timeout.json.file=timeoutconfig.json
 timeout.json.file.default.tjanstekontrakt.name=default_timeouts
-wsdl.json.file=wsdlconfig.json
-wsdlfiles.directory=C:/vp/wsdl/
+wsdl.json.file=classpath:testfiles/wsdl/wsdlconfig.json
+wsdlfiles.directory=classpath:testfiles/wsdl/
 
 #Regexp to filter/remove prevent certain headers from being propagated to producer
 headers.reg.exp.removeRegExp=(?i)rivversion|wsdl_namespace|x-vp-auth-cert|servicecontract_namespace|http.disable.status.code.exception.check|PEER_CERTIFICATES|CamelHttpPath
