--- a/vp-services-camel/pom.xml
+++ b/vp-services-camel/pom.xml
@@ -146,6 +146,23 @@
       <scope>test</scope>
     </dependency>
 
+    <!-- xml document -->
+    <dependency>
+      <groupId>dom4j</groupId>
+      <artifactId>dom4j</artifactId>
+      <version>1.6.1</version>
+    </dependency>
+    <dependency>
+      <groupId>jaxen</groupId>
+      <artifactId>jaxen</artifactId>
+      <version>1.1-beta-8</version>
+    </dependency>
+    <dependency>
+      <groupId>org.codehaus.groovy</groupId>
+      <artifactId>groovy</artifactId>
+      <version>2.5.4</version>
+    </dependency>
+
   </dependencies>
 
   <build>
