--- a/vp-services-camel/src/main/resources/application.properties
+++ b/vp-services-camel/src/main/resources/application.properties
@@ -43,7 +43,7 @@ endpoints.camelroutes.read-only=true
 certificate.senderid.subject.pattern=(?:2.5.4.5|SERIALNUMBER)=([^,]+)
 
 # Reverse proxy/LB header names
-http.forwarded.header.for=X-Forwarded-For
+http.forwarded.header.xfor=X-Forwarded-For
 http.forwarded.header.host=X-Forwarded-Host
 http.forwarded.header.port=X-Forwarded-Port
 http.forwarded.header.proto=X-Forwarded-Proto
