Functionality for extracting data from jars in old VP and do config
Add wsdl and xsd files + config files for handling wsdl functionality

--- a/pom.xml
+++ b/pom.xml
@@ -68,10 +68,17 @@
 
   <modules>
     <module>vp-services-camel</module>
+    <module>mount-wsdls-from-jars</module>
+    <module>utility</module>
   </modules>
 
   <dependencyManagement>
     <dependencies>
+
+      <dependency>
+        <groupId>se.skltp.vp</groupId>
+        <artifactId>utility</artifactId>
+      </dependency>
       <!-- Spring Boot BOM -->
       <dependency>
         <groupId>org.springframework.boot</groupId>
