--- a/vp-services-camel/pom.xml
+++ b/vp-services-camel/pom.xml
@@ -162,6 +162,12 @@
       <artifactId>groovy</artifactId>
       <version>2.5.4</version>
     </dependency>
+    <dependency>
+      <groupId>se.skltp.vp</groupId>
+      <artifactId>utility</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
 
   </dependencies>
 
