NTP-831: Extract mount-wsdls-from-jars to own project
Also rename utility project and use real package names

--- a/pom.xml
+++ b/pom.xml
@@ -67,9 +67,8 @@
   </scm>
 
   <modules>
+    <module>vp-wsdl-utils</module>
     <module>vp-services-camel</module>
-    <module>mount-wsdls-from-jars</module>
-    <module>utility</module>
   </modules>
 
   <dependencyManagement>
