--- a/vp-services-camel/pom.xml
+++ b/vp-services-camel/pom.xml
@@ -11,7 +11,6 @@
     <version>1.0.0-SNAPSHOT</version>
   </parent>
 
-
   <artifactId>vp-services-camel</artifactId>
   <name>vp-services-camel</name>
   <version>1.0.0-SNAPSHOT</version>
@@ -164,8 +163,8 @@
     </dependency>
     <dependency>
       <groupId>se.skltp.vp</groupId>
-      <artifactId>utility</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
+      <artifactId>vp-wsdl-utils</artifactId>
+      <version>${project.version}</version>
       <scope>compile</scope>
     </dependency>
 
