--- a/vp-wsdl-utils/pom.xml
+++ b/vp-wsdl-utils/pom.xml
@@ -28,6 +28,7 @@
     <dependency>
       <groupId>jaxen</groupId>
       <artifactId>jaxen</artifactId>
+      <version>1.2.0</version>
     </dependency>
 
     <dependency>
@@ -37,11 +38,16 @@
     </dependency>
 
     <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-core</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.12</version>
       <scope>test</scope>
     </dependency>
+
   </dependencies>
 
 
