NTP-916: Implement functionality to get wsdl:s and xsd:s

--- a/vp-services-camel/src/main/resources/application.properties
+++ b/vp-services-camel/src/main/resources/application.properties
@@ -44,9 +44,9 @@ certificate.senderid.subject.pattern=(?:2.5.4.5|SERIALNUMBER)=([^,]+)
 
 # Reverse proxy/LB header names
 http.forwarded.header.xfor=X-Forwarded-For
-http.forwarded.header.host=X-Forwarded-Host
-http.forwarded.header.port=X-Forwarded-Port
-http.forwarded.header.proto=X-Forwarded-Proto
+http.forwarded.header.host=X-VP-Forwarded-Host
+http.forwarded.header.port=X-VP-Forwarded-Port
+http.forwarded.header.proto=X-VP-Forwarded-Proto
 
 #comma-separated, this param can be empty
 ip.whitelist=127.0.0.1
@@ -81,7 +81,7 @@ takcache.persistent.file.name=c:/tmp/vp-camel/local-tak-cache.xml
 takcache.endpoint.address=http://localhost:8882/takmockservice
 
 timeout.json.file=timeoutconfig.json
-timeout.json.file.default.tjanstekontrakt.name=default_timeouts
+timeout.json.file.default.tjansteKontrakt.name=default_timeouts
 wsdl.json.file=wsdlconfig.json
 wsdlfiles.directory=C:/vp/wsdl/
 
