--- a/vp-services-camel/pom.xml
+++ b/vp-services-camel/pom.xml
@@ -152,20 +152,14 @@
       <version>1.6.1</version>
     </dependency>
     <dependency>
-      <groupId>jaxen</groupId>
-      <artifactId>jaxen</artifactId>
-      <version>1.1-beta-8</version>
-    </dependency>
-    <dependency>
-      <groupId>org.codehaus.groovy</groupId>
-      <artifactId>groovy</artifactId>
-      <version>2.5.4</version>
-    </dependency>
-    <dependency>
       <groupId>se.skltp.vp</groupId>
       <artifactId>vp-wsdl-utils</artifactId>
       <version>${project.version}</version>
       <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.cxf</groupId>
+      <artifactId>cxf-rt-wsdl</artifactId>
     </dependency>
 
   </dependencies>
