NTP-833 Rundgångsskydd, environment variables.

--- a/vp-services-camel/src/main/resources/application.properties
+++ b/vp-services-camel/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Information om property hantering
 # https://docs.spring.io/spring-boot/docs/current/reference/html/boot-features-external-config.html#boot-features-external-config-application-property-files
-# Lägger man en application.properties i en undermapp med namn config/ där man kör jar filen så overidear värden därifrån värden från denna fil.
+# If you put a file application.properties in a folder named config/ in the same directory where the jar-file is run, that file will override values in this file.
 
 server.port=8880
 
@@ -14,6 +14,7 @@ management.endpoints.web.exposure.include=hawtio,jolokia
 hawtio.authenticationEnabled=false
 
 vp.instance.id=dev_env
+vp.platform.id=A_unique_id
 
 vp.host=localhost
 vp.http.route.url = http://${vp.host}:12312/vp
