Moved FeedbackLoop protection to own branch
(This feature branch feedbackprotection)
added: FeedbackProtectionProcessorImpl.java
FeedbackProtectionProcessorTest.java
FeedbackProtectionProcesssor.java

added code in:
HttpHeaders -> X_VP_PLATFORM_ID
PropertyConstants -> VP_PLATFORM_ID
VpSemanticErrorCodeEnum -> VP014
VPRouter -> FeedbackProtectionProcesssor +imports
test/main/application.properties -> vp.platform.id
vp-messages.properties -> VP014

--- a/vp-services-camel/src/main/resources/application.properties
+++ b/vp-services-camel/src/main/resources/application.properties
@@ -14,6 +14,7 @@ management.endpoints.web.exposure.include=hawtio,jolokia
 hawtio.authenticationEnabled=false
 
 vp.instance.id=dev_env
+vp.platform.id=A_unique_id
 
 
 vp.host=localhost
