--- a/vp-services-camel/src/main/resources/application.properties
+++ b/vp-services-camel/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Information om property hantering
 # https://docs.spring.io/spring-boot/docs/current/reference/html/boot-features-external-config.html#boot-features-external-config-application-property-files
-# If you put a file application.properties in a folder named config/ in the same directory where the jar-file is run, that file will override values in this file.
+# Lägger man en application.properties i en undermapp med namn config/ där man kör jar filen så overidear värden därifrån värden från denna fil.
 
 server.port=8880
 
@@ -14,7 +14,6 @@ management.endpoints.web.exposure.include=hawtio,jolokia
 hawtio.authenticationEnabled=false
 
 vp.instance.id=dev_env
-
 
 vp.host=localhost
 vp.http.route.url = http://${vp.host}:12312/vp
@@ -99,6 +98,3 @@ vp.max.receive.length=15728640
 
 #timeout för producent i ms
 vp.connection.timeout=2000
-
-#Should CertificateExtractorProcessorImpl try to get DN from header x-vp-auth-DN, instead of extract cert?
-use.header.x-vp-auth-DN.to.retrieve.sender.id=true
