--- a/vp-services-camel/src/main/resources/vp-messages.properties
+++ b/vp-services-camel/src/main/resources/vp-messages.properties
@@ -6,7 +6,7 @@ VP005 = No receiverId (logical address) with matching Riv-version found for %s
 VP006 = More than one receiverId (logical address) with matching Riv-version found for %s
 VP007 = Authorization missing for %s
 VP008 = No contact with TAK at startup, and no local cache to fallback on, not possible to route call
-VP009 = Error connecting to service producer. %s
+VP009 = Error connecting to service producer at address %s
 VP010 = Physical Address field is empty in Service Producer for %s
 VP011 = Caller was not on the white list of accepted IP-addresses. %s
 VP012 = Server problem, VP does not have all necessary resources to operate. %s
