--- a/vp-services-camel/src/main/resources/application.properties
+++ b/vp-services-camel/src/main/resources/application.properties
@@ -86,9 +86,12 @@ wsdl.json.file=wsdlconfig.json
 wsdlfiles.directory=C:/vp/wsdl/
 
 #Regexp to filter/remove prevent certain headers from being propagated to producer
-headers.reg.exp.removeRegExp=(?i)rivversion|wsdl_namespace|x-vp-auth-cert|servicecontract_namespace|http.disable.status.code.exception.check|PEER_CERTIFICATES|CamelHttpPath|X-Forwarded-For|X-Forwarded-Host|X-Forwarded-Server|X-Forwarded-HTTPS
 #Regexp to prevent certain headers from being filtered/removed (when propagated to producer)
-headers.reg.exp.keepRegExp=(?i)x-rivta.*
+headers.reg.exp.removeRegExp=(?i)x-vp.*|PEER_CERTIFICATES|X-Forwarded.*|CamelHttpPath
+headers.reg.exp.keepRegExp=(?i)x-vp-sender-id|x-vp-instance-id
+#headers.reg.exp.removeRegExp=(?i)rivversion|wsdl_namespace|x-vp-auth-cert|servicecontract_namespace|http.disable.status.code.exception.check|PEER_CERTIFICATES|CamelHttpPath|X-Forwarded-For|X-Forwarded-Host|X-Forwarded-Server|X-Forwarded-HTTPS
+#headers.reg.exp.keepRegExp=(?i)x-rivta.*
+
 
 vp.producer.retry.attempts=1
 vp.producer.retry.delay=2000
