--- a/vp-services-camel/src/main/resources/application.properties
+++ b/vp-services-camel/src/main/resources/application.properties
@@ -1,13 +1,13 @@
-# Information om property hantering
+# Information about property handling:
 # https://docs.spring.io/spring-boot/docs/current/reference/html/boot-features-external-config.html#boot-features-external-config-application-property-files
-# Lägger man en application.properties i en undermapp med namn config/ där man kör jar filen så overidear värden därifrån värden från denna fil.
+# If you put a file application.properties in a sub-folder named config/ in the folder where the jar resides, that file's values will override values from this file.
 
 server.port=8880
 
 spring.profiles.include=security
 
-# the name of Camel
-camel.springboot.name = vp-services
+# The name of Camel
+camel.springboot.name=vp-services
 
 # Hawtio
 management.endpoints.web.exposure.include=hawtio,jolokia
@@ -23,19 +23,19 @@ vp.hsa.reset.cache.url=http://${vp.host}:24000/resethsacache
 vp.reset.cache.url=http://${vp.host}:23000/resetcache
 vp.status.url=http://${vp.host}:1080/status
 
-# to automatic shutdown the JVM after a period of time
-#camel.springboot.duration-max-seconds=60
-#camel.springboot.duration-max-messages=100
+# To automatic shutdown the JVM after a period of time
+# camel.springboot.duration-max-seconds=60
+# camel.springboot.duration-max-messages=100
 
-# add for example: &repeatCount=5 to the timer endpoint to make Camel idle
-#camel.springboot.duration-max-idle-seconds=15
+# Add for example: &repeatCount=5 to the timer endpoint to make Camel idle
+# camel.springboot.duration-max-idle-seconds=15
 
-# all access to actuator endpoints without security
+# All access to actuator endpoints without security
 management.security.enabled=false
-# turn on actuator health check
+# Turn on actuator health check
 endpoints.health.enabled=true
 
-# allow to obtain basic information about camel routes (read only mode)
+# Allow to obtain basic information about camel routes (read only mode)
 endpoints.camelroutes.enabled=true
 endpoints.camelroutes.read-only=true
 
@@ -48,31 +48,31 @@ http.forwarded.header.host=X-VP-Forwarded-Host
 http.forwarded.header.port=X-VP-Forwarded-Port
 http.forwarded.header.proto=X-VP-Forwarded-Proto
 
-#comma-separated, this param can be empty
+# Comma-separated, this param can be empty
 ip.whitelist=127.0.0.1
 
-#comma separated, this param can be empty
+# Comma separated, this param can be empty
 sender.id.allowed.list=
 
-#Property to determine if the ip.consumer.list should be enforced or not, this param can be empty
-#WARNING: If not existing, the default value is true.
-approve.the.use.of.header.original.consumer=false 
+# Property to determine if the sender.id.allowed.list should be enforced or not, this param can be empty
+# WARNING: If not existing, the default value is true.
+approve.the.use.of.header.original.consumer=false
 
-#Property if correlation id is to be propagated to producer or not, for HTTPS traffic
+# Property to determine if correlation id is to be propagated to producer or not (for HTTPS traffic)
 propagate.correlation.id.for.https=false
 
-#User-Agent for outgoing requests from VP
+# User-Agent for outgoing requests from VP
 vp.header.user.agent=SKLTP VP/3.1
 
-#Content type for outgoing requests from VP
+# Content type for outgoing requests from VP
 vp.header.content.type=text/xml;charset=UTF-8
 
 # List if files to be read by HSA cache, first file is master, rest is complementary
 hsa.files=c:/vp/hsaFiles/hsacache.xml,c:/vp/hsaFiles/hsacachecomplementary.xml
 
 # Defines if we should use old style default routing (VG#VE) when
-#  evaluating vägval and behörigheter. Set this to blank to
-#  turn default routing off.
+# evaluating vägval and behörigheter. Set this to blank to
+# turn default routing off.
 vagvalrouter.default.routing.address.delimiter=#
 
 takcache.use.behorighet.cache=true
@@ -85,19 +85,19 @@ timeout.json.file.default.tjansteKontrakt.name=default_timeouts
 wsdl.json.file=wsdlconfig.json
 wsdlfiles.directory=C:/vp/wsdl/
 
-#Regexp to filter/remove prevent certain headers from being propagated to producer
-#Regexp to prevent certain headers from being filtered/removed (when propagated to producer)
+# Regexp to filter/remove prevent certain headers from being propagated to producer
 headers.reg.exp.removeRegExp=(?i)x-vp.*|PEER_CERTIFICATES|X-Forwarded.*|CamelHttpPath
+# Regexp to prevent certain headers from being filtered/removed (when propagated to producer)
 headers.reg.exp.keepRegExp=(?i)x-vp-sender-id|x-vp-instance-id
-#headers.reg.exp.removeRegExp=(?i)rivversion|wsdl_namespace|x-vp-auth-cert|servicecontract_namespace|http.disable.status.code.exception.check|PEER_CERTIFICATES|CamelHttpPath|X-Forwarded-For|X-Forwarded-Host|X-Forwarded-Server|X-Forwarded-HTTPS
-#headers.reg.exp.keepRegExp=(?i)x-rivta.*
+# headers.reg.exp.removeRegExp=(?i)rivversion|wsdl_namespace|x-vp-auth-cert|servicecontract_namespace|http.disable.status.code.exception.check|PEER_CERTIFICATES|CamelHttpPath|X-Forwarded-For|X-Forwarded-Host|X-Forwarded-Server|X-Forwarded-HTTPS
+# headers.reg.exp.keepRegExp=(?i)x-rivta.*
 
 
 vp.producer.retry.attempts=1
 vp.producer.retry.delay=2000
 
-#response storlek i bytes (15Mb=15*1024*1024)
+# Response size in bytes (15Mb=15*1024*1024)
 vp.max.receive.length=15728640
 
-#timeout för producent i ms
+# Timeout for producer in ms
 vp.connection.timeout=2000
