--- a/vp-services-camel/pom.xml
+++ b/vp-services-camel/pom.xml
@@ -99,6 +99,12 @@
 
     <dependency>
       <groupId>org.apache.camel</groupId>
+      <artifactId>camel-http4</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.camel</groupId>
       <artifactId>camel-stax</artifactId>
     </dependency>
 
