--- a/vp-services-camel/pom.xml
+++ b/vp-services-camel/pom.xml
@@ -98,7 +98,7 @@
 
     <dependency>
       <groupId>org.apache.camel</groupId>
-      <artifactId>camel-http4</artifactId>
+      <artifactId>camel-http4-starter</artifactId>
      </dependency>
 
     <dependency>
