NTP-953: Get better control over netty worker pool
By default Netty creates a own worker pool per producer. This could grow out of our control since we have no control ower the number of producers.
To solve this we should use a shared pool for the producers.

--- a/vp-services-camel/src/test/resources/application.properties
+++ b/vp-services-camel/src/test/resources/application.properties
@@ -81,7 +81,7 @@ wsdl.json.file=classpath:testfiles/wsdl/wsdlconfig.json
 wsdlfiles.directory=classpath:testfiles/wsdl/
 
 # Regexp to filter/remove prevent certain headers from being propagated to producer
-headers.reg.exp.removeRegExp=(?i)rivversion|wsdl_namespace|x-vp-auth-cert|servicecontract_namespace|http.disable.status.code.exception.check|PEER_CERTIFICATES|CamelHttpPath
+headers.reg.exp.removeRegExp=(?i)rivversion|wsdl_namespace|x-vp-auth-cert|servicecontract_namespace|http.disable.status.code.exception.check|PEER_CERTIFICATES
 # Regexp to prevent certain headers from being filtered/removed (when propagated to producer)
 headers.reg.exp.keepRegExp=(?i)x-rivta.*
 
@@ -91,5 +91,9 @@ vp.producer.retry.delay=200
 # Response size in bytes (15Mb=15*1024*1024)
 vp.max.receive.length=15728640
 
-# Timeout for producer in ms
-vp.connection.timeout=2000
+# Communication settings
+producer.connect.timeout=2000
+producer.disconnect=true
+producer.keepAlive=false
+producer.http.workers=100
+producer.https.workers=100
