--- a/vp-services-camel/src/main/resources/application.properties
+++ b/vp-services-camel/src/main/resources/application.properties
@@ -86,7 +86,8 @@ wsdl.json.file=wsdlconfig.json
 wsdlfiles.directory=C:/vp/wsdl/
 
 # Regexp to filter/remove prevent certain headers from being propagated to producer
-headers.reg.exp.removeRegExp=(?i)x-vp.*|PEER_CERTIFICATES|X-Forwarded.*|CamelHttpPath
+#headers.reg.exp.removeRegExp=(?i)x-vp.*|PEER_CERTIFICATES|X-Forwarded.*|CamelHttpPath
+headers.reg.exp.removeRegExp=(?i)x-vp.*|PEER_CERTIFICATES|X-Forwarded.*
 # Regexp to prevent certain headers from being filtered/removed (when propagated to producer)
 headers.reg.exp.keepRegExp=(?i)x-vp-sender-id|x-vp-instance-id
 # headers.reg.exp.removeRegExp=(?i)rivversion|wsdl_namespace|x-vp-auth-cert|servicecontract_namespace|http.disable.status.code.exception.check|PEER_CERTIFICATES|CamelHttpPath|X-Forwarded-For|X-Forwarded-Host|X-Forwarded-Server|X-Forwarded-HTTPS
@@ -99,5 +100,9 @@ vp.producer.retry.delay=2000
 # Response size in bytes (15Mb=15*1024*1024)
 vp.max.receive.length=15728640
 
-# Timeout for producer in ms
-vp.connection.timeout=2000
+# Communication settings
+producer.connect.timeout=2000
+producer.disconnect=true
+producer.keepAlive=false
+producer.http.workers=100
+producer.https.workers=100
