SKLTP-1268: Filter http headers in response
We do not filter response header now. Http response headers should be filtrered in same way as in VP mule

--- a/vp-services-camel/src/test/resources/application.properties
+++ b/vp-services-camel/src/test/resources/application.properties
@@ -80,11 +80,6 @@ timeout.json.file.default.tjanstekontrakt.name=default_timeouts
 wsdl.json.file=classpath:testfiles/wsdl/wsdlconfig.json
 wsdlfiles.directory=classpath:testfiles/wsdl/
 
-# Regexp to filter/remove prevent certain headers from being propagated to producer
-headers.reg.exp.removeRegExp=(?i)rivversion|wsdl_namespace|x-vp-auth-cert|servicecontract_namespace|http.disable.status.code.exception.check|PEER_CERTIFICATES|CamelHttpPath
-# Regexp to prevent certain headers from being filtered/removed (when propagated to producer)
-headers.reg.exp.keepRegExp=(?i)x-rivta.*
-
 vp.producer.retry.attempts=1
 vp.producer.retry.delay=200
 
@@ -92,8 +87,11 @@ vp.producer.retry.delay=200
 vp.max.receive.length=15728640
 
 # Communication settings
-producer.connect.timeout=2000
-producer.disconnect=true
-producer.keepAlive=false
-producer.http.workers=100
-producer.https.workers=100
+producer.http.connect.timeout=2000
+producer.https.connect.timeout=2000
+producer.http.disconnect=false
+producer.https.disconnect=false
+producer.http.keepAlive=false
+producer.https.keepAlive=false
+producer.http.workers=50
+producer.https.workers=150
