--- a/vp-services-camel/src/main/resources/application.properties
+++ b/vp-services-camel/src/main/resources/application.properties
@@ -85,14 +85,6 @@ timeout.json.file.default.tjansteKontrakt.name=default_timeouts
 wsdl.json.file=wsdlconfig.json
 wsdlfiles.directory=C:/vp/wsdl/
 
-# Regexp to filter/remove prevent certain headers from being propagated to producer
-#headers.reg.exp.removeRegExp=(?i)x-vp.*|PEER_CERTIFICATES|X-Forwarded.*|CamelHttpPath
-headers.reg.exp.removeRegExp=(?i)x-vp.*|PEER_CERTIFICATES|X-Forwarded.*
-# Regexp to prevent certain headers from being filtered/removed (when propagated to producer)
-headers.reg.exp.keepRegExp=(?i)x-vp-sender-id|x-vp-instance-id
-# headers.reg.exp.removeRegExp=(?i)rivversion|wsdl_namespace|x-vp-auth-cert|servicecontract_namespace|http.disable.status.code.exception.check|PEER_CERTIFICATES|CamelHttpPath|X-Forwarded-For|X-Forwarded-Host|X-Forwarded-Server|X-Forwarded-HTTPS
-# headers.reg.exp.keepRegExp=(?i)x-rivta.*
-
 
 vp.producer.retry.attempts=1
 vp.producer.retry.delay=2000
@@ -101,8 +93,11 @@ vp.producer.retry.delay=2000
 vp.max.receive.length=15728640
 
 # Communication settings
-producer.connect.timeout=2000
-producer.disconnect=true
-producer.keepAlive=false
-producer.http.workers=100
-producer.https.workers=100
+producer.http.connect.timeout=2000
+producer.https.connect.timeout=2000
+producer.http.disconnect=false
+producer.https.disconnect=false
+producer.http.keepAlive=false
+producer.https.keepAlive=false
+producer.http.workers=50
+producer.https.workers=150
