SKLT-1270 - Handle HTTP 100-Continue responses
Because som producers faulty respond with http 100-Continue we have to handle that

--- a/vp-services-camel/src/test/resources/application.properties
+++ b/vp-services-camel/src/test/resources/application.properties
@@ -95,3 +95,5 @@ producer.http.keepAlive=false
 producer.https.keepAlive=false
 producer.http.workers=50
 producer.https.workers=150
+
+producer.chunked.encoding=false
