NTP-977: Handle server responses with too big content-length
Some producers in production set an invalid content-length with a greater value. Netty handle that as no response received.
We have to be nicer and use the response received.

--- a/vp-services-camel/src/main/resources/application.properties
+++ b/vp-services-camel/src/main/resources/application.properties
@@ -97,7 +97,7 @@ producer.http.connect.timeout=2000
 producer.https.connect.timeout=2000
 producer.http.disconnect=false
 producer.https.disconnect=false
-producer.http.keepAlive=false
-producer.https.keepAlive=false
+producer.http.keepAlive=true
+producer.https.keepAlive=true
 producer.http.workers=50
 producer.https.workers=150
