--- a/pom.xml
+++ b/pom.xml
@@ -226,7 +226,17 @@
       <!--<target>${java.version}</target>-->
       <!--</configuration>-->
       <!--</plugin>-->
-
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.5.1</version>
+        <configuration>
+          <autoVersionSubmodules>true</autoVersionSubmodules>
+          <tagNameFormat>v@{project.version}</tagNameFormat>
+          <pushChanges>true</pushChanges>
+          <localCheckout>true</localCheckout>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>org.apache.camel</groupId>
         <artifactId>camel-maven-plugin</artifactId>
