NTP-990 - Inför Nettys "leak detection" i testfallen
För att undvika att vi har eller får minnesläckor med Nettys direct memory hantering bör vi införa deras leak detection i våra tester.

--- a/jenkins/pipelines/develop_build/Jenkinsfile
+++ b/jenkins/pipelines/develop_build/Jenkinsfile
@@ -20,7 +20,7 @@ pipeline {
                 configFileProvider([configFile(fileId: "${params.CONFIG_FILE_ID}", variable: 'MAVEN_SETTINGS')]) {
                     sh 'pwd'
                     echo 'Compiling, testing and building...'
-                    sh 'mvn --global-settings ${MAVEN_SETTINGS} -P test-coverage clean install'
+                    sh 'mvn --global-settings ${MAVEN_SETTINGS} -P test-coverage,leak clean install'
                 }
             }     
         }        
