--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
     <takdatahandler.version>1.0.1</takdatahandler.version>
 
     <maven.javadoc.skip>true</maven.javadoc.skip>
+
+    <argLine.leak>-D_</argLine.leak> <!-- Overridden when 'leak' profile is active -->
     
     <!-- ************************-->
     <!-- Sonar/Reporting settings -->
@@ -251,6 +253,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.1</version>
+        <configuration>
+          <argLine>${argLine.leak}</argLine>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -267,6 +272,7 @@
           <!--Make failsafe and spring-boot repackage play nice together
           https://github.com/spring-projects/spring-boot/issues/6254-->
           <classesDirectory>${project.build.outputDirectory}</classesDirectory>
+          <argLine>${argLine.leak}</argLine>
         </configuration>
         <executions>
           <execution>
@@ -302,6 +308,12 @@
   </build>
 
   <profiles>
+    <profile>
+      <id>leak</id>
+      <properties>
+        <argLine.leak>-Dio.netty.leakDetectionLevel=paranoid -Dio.netty.leakDetection.maxRecords=32 -Dio.netty.leakDetection.targetRecords=10 -Dspring.profiles.active=leak</argLine.leak>
+      </properties>
+    </profile>
     <profile>
       <id>test-coverage</id>
       <build>
