SKLTP-1299: Visa status information om konfigurations version
Iom felsökningen av minnes problemen blev det tydligt att vi har ett problem med att inte kunna följa upp vilken version av konfigurering som används och när den uppdateras.
Att visa version av konfigurering i status tjänsten är en del i att tydliggöra detta.

--- a/vp-services-camel/src/main/resources/application.properties
+++ b/vp-services-camel/src/main/resources/application.properties
@@ -85,6 +85,7 @@ timeout.json.file.default.tjansteKontrakt.name=default_timeouts
 wsdl.json.file=wsdlconfig.json
 wsdlfiles.directory=C:/vp/wsdl/
 
+configuration.version.file=
 
 vp.producer.retry.attempts=1
 vp.producer.retry.delay=2000
