--- a/vp-services-camel/src/test/resources/application.properties
+++ b/vp-services-camel/src/test/resources/application.properties
@@ -80,6 +80,8 @@ timeout.json.file.default.tjanstekontrakt.name=default_timeouts
 wsdl.json.file=classpath:testfiles/wsdl/wsdlconfig.json
 wsdlfiles.directory=classpath:testfiles/wsdl/
 
+configuration.version.file=classpath:config.version
+
 vp.producer.retry.attempts=1
 vp.producer.retry.delay=200
 
